--- a/templates/pages/.html
+++ b/templates/pages/.html
@@ -75,11 +75,13 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="index.html#mlw">Machine Learning</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="index.html#finstats">Financial Technology/Stats</a>
                         </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#cyber">Cybersecurity</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#finstats">Financial Technology/Stats</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#certs">Certifications</a>
@@ -108,12 +110,12 @@
 <body>
     <div class="summary">
         <h1></h1>
-        <h3>Completion: Month Year</h3>
+        <h3>Completion: </h3>
         <p></p>
         <p>Tags: 
             
             <span class="tag" style="background-color: #BEE7FE;">
-                
+               
             </span>
             
             <span class="tag" style="background-color: #BEE7FE;">
@@ -126,7 +128,6 @@
         </a>
     </div>
 </body>
-
 
         </div>
 
