--- a/templates/pages/struct.html
+++ b/templates/pages/struct.html
@@ -65,8 +65,6 @@
                             ML Work
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="index.html#ai">Artificial Intelligence</a>
-                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="index.html#nlp">Natural Language Processing</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="index.html#robotics">Robotics</a>
@@ -74,12 +72,13 @@
                             <a class="dropdown-item" href="index.html#cv">Computer Vision</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="index.html#mlw">Machine Learning</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="index.html#finstats">Financial Technology/Stats</a>
                         </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#cyber">Cybersecurity</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#finstats">Financial Technology/Stats</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#certs">Certifications</a>
@@ -88,10 +87,14 @@
                         <a class="nav-link" href="index.html#contact">Contact Me</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search Tags [E.g. 'Python']" aria-label="Search">
-                    <button class="btn btn-outline-info" type="submit">Search</button>
+                <form class="d-flex" action="/christopher.github.io/templates/results.html" method="GET" id="searchForm">
+                    <label for="SearchInput"></label>
+                    <input id = "SearchInput" class="form-control me-2" type="search" name="query" placeholder="Search Tags" aria-label="Search">
+                    <button class="btn btn-outline-info" type="submit">Search</button>                 
                 </form>
+                <div id="searchResults"></div>
+
+                <script src="static/js/search.js"></script>
             </div>
         </div>
     </nav>
@@ -107,26 +110,37 @@
 </head>
 <body>
     <div class="summary">
-        <h1></h1>
-        <h3>Completion: Month Year</h3>
-        <p></p>
+        <h1>Projects in Data Structures</h1>
+        <h3>Completion: August 2021</h3>
+        <p><br><b> MyStack.java </b> <br> The class uses an array of Generic type T to implement a stack. <br>The stack starts at the left side of the array, building to the right. <br>Methods: <br> &nbsp * pop(): returns the top value of stack, also decrements top and size <br> &nbsp * push(T x): increments top and size, also adds element x to the top of stack <br> &nbsp * peek(): returns the value of top <br> &nbsp * isEmpty(): returns true if there are no elements on stack  <br> &nbsp * size(): returns the value of size (number of elements on stack) <br><br> <b> TwoStackQueue.java </b> <br> This class uses two stacks, S1 and S2, to implement a queue. <br> Methods: <br> &nbsp * enqueue(): adds an element to the back of the queue (top of S1) <br> &nbsp * dequeue(): removes and returns an element from the front of the queue (top of S2) <br> &nbsp * size(): returns the number of elements in the queue <br> &nbsp * isEmpty(): returns true if the queue has no elements <br><br> <b> KBestCounter.java </b> <br> Constructor: <br> &nbsp &nbsp takes in an int that represents the number of largest elements to be returned<br> Methods: <br> &nbsp * count(T x) <br> &nbsp &nbsp takes in the next element in the set of data <br> &nbsp &nbsp no return <br> &nbsp &nbsp runs in worst O(log k) time; <br> &nbsp * kbest(): <br> &nbsp &nbsp takes in no arguments <br> &nbsp &nbsp returns a list of the k-largest elements. <br> &nbsp &nbsp runs in worst O(k logk) time. </p>
         <p>Tags: 
             
-            <span class="tag" style="background-color: #BEE7FE;">
-                
+            <span class="tag" style="background-color: #007396;">
+                Java
+            </span>
+            
+            <span class="tag" style="background-color: #FFC107;">
+                Object Oriented Programming
             </span>
             
             <span class="tag" style="background-color: #BEE7FE;">
-                
+                Data Structures
+            </span>
+            
+            <span class="tag" style="background-color: #FF8C00;">
+                Backend
+            </span>
+            
+            <span class="tag" style="background-color: #C4D8E2;">
+                Columbia
             </span>
             
         </p>
-        <a href="index.html#">
+        <a href="index.html#Projects in Data Structures">
             <button type="button" class="btn btn-outline-info">Back to Home</button>
         </a>
     </div>
 </body>
-
 
         </div>
 
