--- a/static/css/project.css
+++ b/static/css/project.css
@@ -105,7 +105,8 @@
 }
 
 .summary{
-    padding: 10px;
+    padding: 40px;
+    padding-right: 150px;
     border-spacing: 5pt;
     border: black solid 2px;
     border-radius: 10pt;
