--- a/templates/pages/BERT.html
+++ b/templates/pages/BERT.html
@@ -65,8 +65,6 @@
                             ML Work
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="index.html#ai">Artificial Intelligence</a>
-                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="index.html#nlp">Natural Language Processing</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="index.html#robotics">Robotics</a>
@@ -74,12 +72,13 @@
                             <a class="dropdown-item" href="index.html#cv">Computer Vision</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="index.html#mlw">Machine Learning</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="index.html#finstats">Financial Technology/Stats</a>
                         </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#cyber">Cybersecurity</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#finstats">Financial Technology/Stats</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#certs">Certifications</a>
@@ -88,10 +87,14 @@
                         <a class="nav-link" href="index.html#contact">Contact Me</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search Tags [E.g. 'Python']" aria-label="Search">
-                    <button class="btn btn-outline-info" type="submit">Search</button>
+                <form class="d-flex" action="/christopher.github.io/templates/results.html" method="GET" id="searchForm">
+                    <label for="SearchInput"></label>
+                    <input id = "SearchInput" class="form-control me-2" type="search" name="query" placeholder="Search Tags" aria-label="Search">
+                    <button class="btn btn-outline-info" type="submit">Search</button>                 
                 </form>
+                <div id="searchResults"></div>
+
+                <script src="static/js/search.js"></script>
             </div>
         </div>
     </nav>
@@ -107,34 +110,57 @@
 </head>
 <body>
     <div class="summary">
-        <h1>NFL Webiste</h1>
-        <h3>Completion: December 2023</h3>
-        <p>This is a group project...</p>
+        <h1>BERT Lexical Substitution</h1>
+        <h3>Completion: November 2023</h3>
+        <p><b>Task:</b> <br> In this task, the goal is to find lexical substitutes for individual target words in context. For example, given the following sentence: 'Anyway, my pants are getting tighter every day.' the goal is to propose an alternative word for tight, such that the meaning of the sentence is preserved. Such a substitute could be 'constricting', 'small' or 'uncomfortable.' <br> To complete this task the pretrained model, DistilBERT from HuggingFace, is used to find substitutes. <br><br> Five different approaches are taken to find lexical substitutes: WordNet Frequency Baseline, Lesk Algorithm, Word2Vec Embeddings, BERT Pretrained Embeddings, Query with Chatgpt API. <br><br><b> WordNet Frequency Baseline </b><br> Given a context, use WordNet to find the possible synynomy with the highest total occurrence frequency in the same context in WordNet. <br><b> Lesk Algorithm </b> Word Sense Disambiguation (WSD) is performed using the Lesk Algorithm to select a synset for the target word where the definition of the synset and the context of the target word are similar. The algorithm then returns the most frequent synonym from that synset as a substitute.  <br><b> Word2Vec Embeddings </b> Find possible synonyms for the target word using WordNet. Return the synonym that is most similar to the target word according to the Word2Vec embedding. <br><b> BERT Pretrained Embedding </b> Using Keras, feed in an embedded sentenced with the target word masked. BERT will returned the candidate for the target word given the context. <br><b> Query Chatgpt API </b> Feed the sentence into a Chatgpt prompt using Chatgpt's API. Chatgpt will give the best substitute. Results are improved using few-shot prompting.</p>
         <p>Tags: 
             
-            <span class="tag" style="background-color: #BEE7FE;">
+            <span class="tag" style="background-color: #00FF00;">
                 NLP
             </span>
             
-            <span class="tag" style="background-color: #FF9900;">
-                AWS
+            <span class="tag" style="background-color: #306998;">
+                Python
+            </span>
+            
+            <span class="tag" style="background-color: #FFCA36;">
+                HuggingFace
+            </span>
+            
+            <span class="tag" style="background-color: #67C4D8;">
+                Rest API
+            </span>
+            
+            <span class="tag" style="background-color: #BEE7FE;">
+                Word2Vec
+            </span>
+            
+            <span class="tag" style="background-color: #BEE7FE;">
+                Neural Network
+            </span>
+            
+            <span class="tag" style="background-color: #FF6F00;">
+                TensorFlow
+            </span>
+            
+            <span class="tag" style="background-color: #BF281B;">
+                Keras
+            </span>
+            
+            <span class="tag" style="background-color: #BEE7FE;">
+                Prompting
             </span>
             
             <span class="tag" style="background-color: #C4D8E2;">
                 Columbia
             </span>
             
-            <span class="tag" style="background-color: #4CAF50;">
-                Teamwork
-            </span>
-            
         </p>
-        <a href="index.html#NFL Webiste">
+        <a href="index.html#BERT Lexical Substitution">
             <button type="button" class="btn btn-outline-info">Back to Home</button>
         </a>
     </div>
 </body>
-
 
         </div>
 
