--- a/templates/pages/P4.html
+++ b/templates/pages/P4.html
@@ -65,8 +65,6 @@
                             ML Work
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="index.html#ai">Artificial Intelligence</a>
-                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="index.html#nlp">Natural Language Processing</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="index.html#robotics">Robotics</a>
@@ -74,12 +72,13 @@
                             <a class="dropdown-item" href="index.html#cv">Computer Vision</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="index.html#mlw">Machine Learning</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="index.html#finstats">Financial Technology/Stats</a>
                         </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#cyber">Cybersecurity</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#finstats">Financial Technology/Stats</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#certs">Certifications</a>
@@ -88,10 +87,14 @@
                         <a class="nav-link" href="index.html#contact">Contact Me</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search Tags [E.g. 'Python']" aria-label="Search">
-                    <button class="btn btn-outline-info" type="submit">Search</button>
+                <form class="d-flex" action="/christopher.github.io/templates/results.html" method="GET" id="searchForm">
+                    <label for="SearchInput"></label>
+                    <input id = "SearchInput" class="form-control me-2" type="search" name="query" placeholder="Search Tags" aria-label="Search">
+                    <button class="btn btn-outline-info" type="submit">Search</button>                 
                 </form>
+                <div id="searchResults"></div>
+
+                <script src="static/js/search.js"></script>
             </div>
         </div>
     </nav>
@@ -108,24 +111,44 @@
 <body>
     <div class="summary">
         <h1>P4 IoT Firewall</h1>
-        <h3>Completion: December 2023</h3>
-        <p>This is a research project...</p>
+        <h3>Completion: August 2023</h3>
+        <p>In this repository, I built upon the exisiting codebase of the lab's P4 Firewall project. My contributions lie in the following files:<br><br>*controller.py <br>*basic.p4 <br><br> Where I created a blacklist routine for the firewall. This routine would block ip addresses when the traffic received from these IoT devices contained abnormally large packet sizes, or if the rate at which these packets were received were abnormal as well. Both of these rules monitor live traffic sent to and received at the firewall.</p>
         <p>Tags: 
             
-            <span class="tag" style="background-color: #BEE7FE;">
-                NLP
+            <span class="tag" style="background-color: #9370DB;">
+                Research
             </span>
             
-            <span class="tag" style="background-color: #FF9900;">
-                AWS
+            <span class="tag" style="background-color: #000000;">
+                P4
+            </span>
+            
+            <span class="tag" style="background-color: #306998;">
+                Python
+            </span>
+            
+            <span class="tag" style="background-color: #222222;">
+                Networks
+            </span>
+            
+            <span class="tag" style="background-color: #BEE7FE;">
+                Intelligence
+            </span>
+            
+            <span class="tag" style="background-color: #B22222;">
+                Firewall
+            </span>
+            
+            <span class="tag" style="background-color: #339933;">
+                Wireshark
+            </span>
+            
+            <span class="tag" style="background-color: #BEE7FE;">
+                IoT
             </span>
             
             <span class="tag" style="background-color: #C4D8E2;">
                 Columbia
-            </span>
-            
-            <span class="tag" style="background-color: #4CAF50;">
-                Teamwork
             </span>
             
         </p>
@@ -134,7 +157,6 @@
         </a>
     </div>
 </body>
-
 
         </div>
 
