full website, working on search

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -85,11 +85,11 @@
                         <a class="nav-link" href="index.html#contact">Contact Me</a>
                     </li>
                 </ul>
-                <form class="d-flex" action="/christopher.github.io/templates/results.html" method="GET" id="searchForm">
+                <!--form class="d-flex" action="/christopher.github.io/templates/results.html" method="GET" id="searchForm">
                     <label for="SearchInput"></label>
                     <input id = "SearchInput" class="form-control me-2" type="search" name="query" placeholder="Search Tags" aria-label="Search">
                     <button class="btn btn-outline-info" type="submit">Search</button>                 
-                </form>
+                </form-->
                 <div id="searchResults"></div>
 
                 <script src="static/js/search.js"></script>
